--- a/src/Main/resources/FXML/allAccount.fxml
+++ b/src/Main/resources/FXML/allAccount.fxml
@@ -2,14 +2,15 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.Home">
+<AnchorPane prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.Home">
    <children>
       <Pane layoutY="-7.0" prefHeight="711.0" prefWidth="213.0" style="-fx-background-color: #4287f5;">
          <children>
@@ -47,56 +48,16 @@
       </Pane>
       <AnchorPane layoutX="213.0" layoutY="-1.0" prefHeight="699.0" prefWidth="588.0">
          <children>
-            <AnchorPane layoutX="18.0" layoutY="20.0" prefHeight="114.0" prefWidth="553.0" style="-fx-background-color: #e7f0fe;">
-               <children>
-                  <ImageView fitHeight="119.0" fitWidth="120.0" pickOnBounds="true">
-                     <image>
-                        <Image url="@../images/icons8_user_96px.png" />
-                     </image>
-                  </ImageView>
-                  <Text layoutX="150.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username : staff01">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Text>
-                  <Text layoutX="150.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อ : สมศัก รักเรียน">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Text>
-                  <Button layoutX="430.0" layoutY="41.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="102.0" text="รายละเอียด" />
-                  <Text layoutX="150.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ตำแหน่ง : Staff">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Text>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="18.0" layoutY="149.0" prefHeight="114.0" prefWidth="553.0" style="-fx-background-color: #e7f0fe;">
-               <children>
-                  <ImageView fitHeight="119.0" fitWidth="120.0" pickOnBounds="true">
-                     <image>
-                        <Image url="@../images/icons8_user_96px.png" />
-                     </image>
-                  </ImageView>
-                  <Text layoutX="150.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username : manager07">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Text>
-                  <Text layoutX="150.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อ : สมชาย เรียนรัก">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Text>
-                  <Button layoutX="430.0" layoutY="41.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="102.0" text="รายละเอียด" />
-                  <Text layoutX="150.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ตำแหน่ง : Manager">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Text>
-               </children>
-            </AnchorPane>
+            <TableView layoutY="2.0" prefHeight="704.0" prefWidth="891.0">
+              <columns>
+                <TableColumn prefWidth="106.0" text="รูป" />
+                <TableColumn prefWidth="199.0" text="ชื่อ" />
+                  <TableColumn prefWidth="132.0" text="Username" />
+                  <TableColumn prefWidth="73.0" text="ตำแหน่ง" />
+                  <TableColumn prefWidth="180.0" text="เบอร์โทรศัพท์" />
+                  <TableColumn prefWidth="224.0" text="email" />
+              </columns>
+            </TableView>
          </children>
       </AnchorPane>
    </children>
