--- a/src/Main/resources/FXML/declarationWait.fxml
+++ b/src/Main/resources/FXML/declarationWait.fxml
@@ -2,13 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.Home">
    <children>
@@ -56,88 +56,13 @@
             </Button>
          </children>
       </Pane>
-      <AnchorPane layoutX="213.0" prefHeight="704.0" prefWidth="588.0">
-         <children>
-            <ScrollPane prefHeight="704.0" prefWidth="588.0">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="589.0">
-                     <children>
-                        <AnchorPane layoutX="14.0" layoutY="21.0" prefHeight="114.0" prefWidth="553.0" style="-fx-background-color: #e7f0fe;">
-                           <children>
-                              <ImageView fitHeight="119.0" fitWidth="120.0" pickOnBounds="true">
-                                 <image>
-                                    <Image url="@../images/product_preview.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Text layoutX="150.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อสินค้า : หมอน">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="150.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสสินค้า : hw001">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                              <Label layoutX="392.0" layoutY="35.0" text="รอดำเนินการ">
-                                 <font>
-                                    <Font size="30.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="14.0" layoutY="161.0" prefHeight="114.0" prefWidth="553.0" style="-fx-background-color: #e7f0fe;">
-                           <children>
-                              <ImageView fitHeight="119.0" fitWidth="120.0" pickOnBounds="true">
-                                 <image>
-                                    <Image url="@../images/product_preview.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Text layoutX="150.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อสินค้า : หมอน">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="150.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสสินค้า : hw001">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                              <Label layoutX="426.0" layoutY="35.0" text="อนุมัติแล้ว" textFill="#1b8637">
-                                 <font>
-                                    <Font size="30.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="14.0" layoutY="300.0" prefHeight="114.0" prefWidth="553.0" style="-fx-background-color: #e7f0fe;">
-                           <children>
-                              <ImageView fitHeight="119.0" fitWidth="120.0" pickOnBounds="true">
-                                 <image>
-                                    <Image url="@../images/product_preview.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Text layoutX="150.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อสินค้า : หมอน">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="150.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสสินค้า : hw001">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                              <Label layoutX="442.0" layoutY="35.0" text="ไม่อนุมัติ" textFill="#f22f2f">
-                                 <font>
-                                    <Font size="30.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </AnchorPane>
-              </content>
-            </ScrollPane>
-         </children></AnchorPane>
+      <TableView layoutX="213.0" prefHeight="704.0" prefWidth="586.0">
+        <columns>
+            <TableColumn prefWidth="120.0" text="รูป" />
+          <TableColumn prefWidth="86.0" text="รหัสสินค้า" />
+          <TableColumn prefWidth="279.0" text="ชื่อสินค้า" />
+            <TableColumn prefWidth="100.0" text="สถานะ" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
