--- a/src/Main/resources/FXML/login.fxml
+++ b/src/Main/resources/FXML/login.fxml
@@ -2,17 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.java.controllers.LoginController">
    <children>
       <TextField layoutX="177.0" layoutY="188.0" prefHeight="25.0" prefWidth="286.0" />
-      <TextField layoutX="177.0" layoutY="229.0" prefHeight="25.0" prefWidth="286.0" />
       <Button layoutX="177.0" layoutY="278.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="286.0" text="Login">
          <font>
             <Font size="15.0" />
@@ -26,5 +25,6 @@
       <Button layoutX="537.0" layoutY="361.0" mnemonicParsing="false" text="ผู้จัดทำ" />
       <Label layoutX="113.0" layoutY="192.0" text="Username :" />
       <Label layoutX="115.0" layoutY="233.0" text="Password :" />
+      <PasswordField layoutX="177.0" layoutY="229.0" prefHeight="25.0" prefWidth="286.0" />
    </children>
 </AnchorPane>
