Add new product feature

--- a/src/Main/resources/FXML/declarationWait.fxml
+++ b/src/Main/resources/FXML/declarationWait.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.Home">
+<AnchorPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.java.controllers.DeclarationWaitController">
    <children>
       <Pane layoutY="-7.0" prefHeight="711.0" prefWidth="213.0" style="-fx-background-color: #4287f5;">
          <children>
