--- a/src/Main/resources/FXML/login.fxml
+++ b/src/Main/resources/FXML/login.fxml
@@ -15,7 +15,7 @@
          <font>
             <Font size="14.0" />
          </font></TextField>
-      <Button layoutX="196.0" layoutY="289.0" mnemonicParsing="false" onAction="#loginBtn" prefHeight="35.0" prefWidth="286.0" style="-fx-background-radius: 5em;" text="Login">
+      <Button layoutX="196.0" layoutY="289.0" mnemonicParsing="false" onAction="#loginBtn" prefHeight="35.0" prefWidth="286.0" styleClass="button3" stylesheets="@../css/fullpackstyling.css" text="Login" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
@@ -25,7 +25,7 @@
             <Image url="@../images/logo.png" />
          </image>
       </ImageView>
-      <Button layoutX="527.0" layoutY="348.0" mnemonicParsing="false" style="-fx-background-radius: 5em;" text="ผู้จัดทำ">
+      <Button layoutX="527.0" layoutY="348.0" mnemonicParsing="false" style="-fx-background-radius: 5em;" styleClass="button3" stylesheets="@../css/fullpackstyling.css" text="ผู้จัดทำ" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font></Button>
