--- a/src/Main/resources/FXML/declarationDetail.fxml
+++ b/src/Main/resources/FXML/declarationDetail.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="907.0" style="-fx-background-color: #e6e6e6;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.java.controllers.AllProductController">
+<AnchorPane prefHeight="700.0" prefWidth="907.0" style="-fx-background-color: #e6e6e6;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.java.controllers.DeclarationDetailController">
    <children>
       <Label layoutX="47.0" layoutY="23.0" prefHeight="23.0" prefWidth="137.0" text="รายละเอียด">
          <font>
