--- a/src/Main/resources/FXML/declarationConfirm.fxml
+++ b/src/Main/resources/FXML/declarationConfirm.fxml
@@ -11,32 +11,32 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.java.controllers.DeclarationConfirmController">
+<AnchorPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.java.controllers.DeclarationConfirmController">
    <children>
       <TabPane layoutX="213.0" prefHeight="704.0" prefWidth="587.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="รับสินค้าเข้า">
                <content>
-                  <TableView prefHeight="200.0" prefWidth="200.0">
+                  <TableView fx:id="importTable" prefHeight="200.0" prefWidth="200.0">
                     <columns>
-                        <TableColumn prefWidth="71.0" text="ไอดี" />
-                        <TableColumn prefWidth="303.0" text="วันที่ทำรายการ" />
-                      <TableColumn prefWidth="99.0" text="รายละเอียด" />
-                        <TableColumn prefWidth="60.0" text="อนุมัติ" />
-                        <TableColumn prefWidth="54.0" text="ไม่อนุมัติ" />
+                        <TableColumn fx:id="idICol" prefWidth="71.0" text="ไอดี" />
+                        <TableColumn fx:id="timeICol" prefWidth="303.0" text="วันที่ทำรายการ" />
+                      <TableColumn fx:id="detailICol" prefWidth="99.0" text="รายละเอียด" />
+                        <TableColumn fx:id="yICol" prefWidth="60.0" text="อนุมัติ" />
+                        <TableColumn fx:id="nICol" prefWidth="54.0" text="ไม่อนุมัติ" />
                     </columns>
                   </TableView>
                </content>
           </Tab>
           <Tab text="นำสินค้าออก">
                <content>
-                  <TableView prefHeight="200.0" prefWidth="200.0">
+                  <TableView fx:id="exportTable" prefHeight="200.0" prefWidth="200.0">
                      <columns>
-                        <TableColumn prefWidth="72.0" text="ไอดี" />
-                        <TableColumn prefWidth="302.0" text="วันที่ทำรายการ" />
-                        <TableColumn prefWidth="99.0" text="รายละเอียด" />
-                        <TableColumn prefWidth="60.0" text="อนุมัติ" />
-                        <TableColumn prefWidth="54.0" text="ไม่อนุมัติ" />
+                        <TableColumn fx:id="idECol" prefWidth="72.0" text="ไอดี" />
+                        <TableColumn fx:id="timeECol" prefWidth="302.0" text="วันที่ทำรายการ" />
+                        <TableColumn fx:id="detailECol" prefWidth="99.0" text="รายละเอียด" />
+                        <TableColumn fx:id="yECol" prefWidth="60.0" text="อนุมัติ" />
+                        <TableColumn fx:id="nECol" prefWidth="54.0" text="ไม่อนุมัติ" />
                      </columns>
                   </TableView>
                </content>
@@ -50,7 +50,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button layoutY="490.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="213.0" styleClass="button1" stylesheets="@../css/fullpackstyling.css" text="รายการรออนุมัติ" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="declarationWait" layoutY="490.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="213.0" styleClass="button1" stylesheets="@../css/fullpackstyling.css" text="รายการรออนุมัติ" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -70,7 +70,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button layoutY="541.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="213.0" styleClass="button1" stylesheets="@../css/fullpackstyling.css" text="รายการต้องอนุมัติ" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="declarationConfirm" disable="true" layoutY="541.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="213.0" styleClass="button1" stylesheets="@../css/fullpackstyling.css" text="รายการต้องอนุมัติ" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
